<<<<<<< Updated upstream
[gd_scene load_steps=19 format=3 uid="uid://b5ralt6nyemgu"]
=======
[gd_scene load_steps=28 format=3 uid="uid://b5ralt6nyemgu"]
>>>>>>> Stashed changes

[ext_resource type="Script" uid="uid://cjroiox442k41" path="res://scripts/UI_Scripts/select_level_4.gd" id="1_tj7b5"]
[ext_resource type="Shader" uid="uid://chfkq82vmvjuu" path="res://scenes/SelectLevel2.gdshader" id="2_ji3qw"]
[ext_resource type="Texture2D" uid="uid://8gsfsmx8fv71" path="res://assets/Jungle Asset Pack/parallax background/unnamed.jpg" id="3_oc8lb"]
[ext_resource type="Texture2D" uid="uid://jeehyp7hpqns" path="res://assets/Jungle Asset Pack/parallax background/Window.png" id="4_wupp6"]
[ext_resource type="FontFile" uid="uid://d081marsgcthd" path="res://assets/Jungle Asset Pack/Pixeled.ttf" id="5_stah2"]
[ext_resource type="Texture2D" uid="uid://dakrd3uqsu42m" path="res://assets/Jungle Asset Pack/parallax background/Button.png" id="6_xtjxf"]
<<<<<<< Updated upstream
[ext_resource type="Texture2D" uid="uid://cumn5lgfm4a26" path="res://assets/Jungle Asset Pack/parallax background/Screenshot 2025-10-17 152747.png" id="7_piry3"]
[ext_resource type="Texture2D" uid="uid://b5mr45jlxtgb7" path="res://assets/Jungle Asset Pack/parallax background/boss.jpg" id="8_ji3qw"]
=======
[ext_resource type="Texture2D" uid="uid://cumn5lgfm4a26" path="res://assets/Jungle Asset Pack/parallax background/BlueButton.png" id="7_piry3"]
[ext_resource type="Texture2D" uid="uid://cw0ggi016uokk" path="res://assets/skull/1.png" id="8_oc8lb"]
[ext_resource type="Texture2D" uid="uid://s71yvh7jigbb" path="res://assets/skull/2.png" id="9_wupp6"]
[ext_resource type="Texture2D" uid="uid://dq6evkyk35uyu" path="res://assets/Jungle Asset Pack/parallax background/redButton.png" id="10_redbtn"]
[ext_resource type="Texture2D" uid="uid://byvdy8ssa2vv" path="res://assets/Jungle Asset Pack/parallax background/LockScreen.png" id="11_lock"]
[ext_resource type="Texture2D" uid="uid://dxbvug5of2pfh" path="res://assets/Jungle Asset Pack/parallax background/lock.png" id="12_xtjxf"]
>>>>>>> Stashed changes

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg6gg"]
shader = ExtResource("2_ji3qw")
shader_parameter/speed = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dj3"]
atlas = ExtResource("4_wupp6")
region = Rect2(1057, 162, 926, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf23d"]
atlas = ExtResource("4_wupp6")
region = Rect2(1328, 48, 344, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cj5g"]
atlas = ExtResource("6_xtjxf")
region = Rect2(759, 668, 181, 189)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf23d"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m84f5"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a2xwi"]
texture = ExtResource("7_piry3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lock_disabled"]
texture = ExtResource("11_lock")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_red_hover"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_red_pressed"]
texture = SubResource("AtlasTexture_6cj5g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_red_normal"]
texture = ExtResource("10_redbtn")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_stah2"]
frames = 2
frame_0/texture = ExtResource("8_oc8lb")
frame_1/texture = ExtResource("9_wupp6")
frame_1/duration = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_bg6gg"]
atlas = ExtResource("6_xtjxf")
region = Rect2(197, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv5ut"]
atlas = ExtResource("6_xtjxf")
region = Rect2(810, 1190, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xwi"]
atlas = ExtResource("6_xtjxf")
region = Rect2(401, 1190, 181, 190)

[node name="SelectLevel4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tj7b5")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_bg6gg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oc8lb")
expand_mode = 1

[node name="LevelMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -279.0
offset_right = 444.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_k0dj3")
expand_mode = 1

[node name="Title" type="TextureRect" parent="LevelMenu"]
layout_mode = 0
offset_left = 277.0
offset_top = 11.0
offset_right = 621.0
offset_bottom = 99.0
texture = SubResource("AtlasTexture_rf23d")

[node name="btnlv37" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 40.0
offset_top = 122.0
offset_right = 184.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "37
"

[node name="lock37" type="TextureRect" parent="LevelMenu/btnlv37"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 144.0
offset_bottom = 110.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv38" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 259.0
offset_top = 122.0
offset_right = 403.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "38
"

[node name="lock38" type="TextureRect" parent="LevelMenu/btnlv38"]
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 145.0
offset_bottom = 109.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv39" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 482.0
offset_top = 124.0
offset_right = 626.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "39
"

[node name="lock39" type="TextureRect" parent="LevelMenu/btnlv39"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 145.0
offset_bottom = 110.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv40" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 692.0
offset_top = 122.0
offset_right = 836.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "40
"

[node name="lock40" type="TextureRect" parent="LevelMenu/btnlv40"]
layout_mode = 0
offset_left = -3.0
offset_right = 143.0
offset_bottom = 111.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv41" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 40.0
offset_top = 237.0
offset_right = 184.0
offset_bottom = 349.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "41"

[node name="lock41" type="TextureRect" parent="LevelMenu/btnlv41"]
layout_mode = 0
offset_left = -4.0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 112.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv42" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 261.0
offset_top = 239.0
offset_right = 405.0
offset_bottom = 351.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "42
"

[node name="lock42" type="TextureRect" parent="LevelMenu/btnlv42"]
layout_mode = 0
offset_right = 146.0
offset_bottom = 111.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv43" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 482.0
offset_top = 239.0
offset_right = 626.0
offset_bottom = 351.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "43
"

[node name="lock43" type="TextureRect" parent="LevelMenu/btnlv43"]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 147.0
offset_bottom = 110.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv44" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 694.0
offset_top = 236.0
offset_right = 838.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "44
"

[node name="lock44" type="TextureRect" parent="LevelMenu/btnlv44"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 145.0
offset_bottom = 110.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv45" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 261.0
offset_top = 355.0
offset_right = 405.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_rf23d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m84f5")
theme_override_styles/normal = SubResource("StyleBoxTexture_a2xwi")
text = "45
"

[node name="lock45" type="TextureRect" parent="LevelMenu/btnlv45"]
layout_mode = 0
offset_left = -4.0
offset_top = 1.0
offset_right = 142.0
offset_bottom = 112.0
texture = ExtResource("12_xtjxf")
expand_mode = 1

[node name="btnlv46" type="Button" parent="LevelMenu"]
layout_mode = 0
offset_left = 481.0
offset_top = 356.0
offset_right = 993.0
offset_bottom = 868.0
scale = Vector2(0.285, 0.215)
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 40
theme_override_styles/disabled = SubResource("StyleBoxTexture_lock_disabled")
theme_override_styles/hover = SubResource("StyleBoxTexture_red_hover")
theme_override_styles/pressed = SubResource("StyleBoxTexture_red_pressed")
theme_override_styles/normal = SubResource("StyleBoxTexture_red_normal")
text = "
"
icon = SubResource("AnimatedTexture_stah2")

[node name="KeyLabel" type="Label" parent="LevelMenu"]
layout_mode = 0
<<<<<<< Updated upstream
offset_left = 260.0
offset_top = 460.0
offset_right = 412.0
offset_bottom = 516.0
=======
offset_left = 700.0
offset_top = 406.0
offset_right = 852.0
offset_bottom = 462.0
>>>>>>> Stashed changes
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 20
text = " 0/3"
horizontal_alignment = 1

[node name="btnResetKeys" type="Button" parent="LevelMenu"]
visible = false
layout_mode = 0
offset_left = 472.0
offset_top = 471.0
offset_right = 636.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("5_stah2")
theme_override_font_sizes/font_size = 16
text = "Reset Keys "

[node name="btnBack" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 281.0
offset_right = 644.0
offset_bottom = 839.0
scale = Vector2(0.2, 0.2)
texture_normal = SubResource("AtlasTexture_bg6gg")
texture_pressed = SubResource("AtlasTexture_xv5ut")
texture_hover = SubResource("AtlasTexture_a2xwi")
stretch_mode = 0

[connection signal="pressed" from="LevelMenu/btnResetKeys" to="." method="_on_reset_keys_pressed"]
[connection signal="pressed" from="btnBack" to="." method="_on_btn_back_pressed"]
